--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="header"> 
 
-            <h1>Bienvenido a Mi Portafolio</h1> 
+            <h1>Bienvenido a Mi Portafolio.</h1> 
 
         </div> 
 
